// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/auth/Signup Default smoke-test 1`] = `
<div class="overflow-hidden justify-center">
  <ul class="inline-flex rounded-lg bg-grey-2 p-2 gap-3 w-full overflow-x-auto !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="true"
      >
        Compte sans mot de passe
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="false"
      >
        Compte avec mot de passe
      </button>
    </li>
  </ul>
  <div id="tabpanel-0"
       class
       role="tabpanel"
       aria-labelledby="tab-0"
       tabindex="0"
       label="Compte sans mot de passe"
  >
    <form class="flex flex-col gap-4">
      <div class="flex-grow flex flex-col gap-3">
        <label for="email">
          <div class="font-medium text-grey-8">
            Email professionnel *
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="text"
                 class="grow text-grey-8 px-4 outline-none text-md py-3"
                 id="email"
                 name="email"
          >
        </div>
      </div>
      <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
      <div class="flex gap-4 flex-wrap justify-end">
        <button type="button"
                class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
        >
          Annuler
        </button>
        <button type="submit"
                class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
        >
          Valider
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/auth/Signup Etape1AvecMdp smoke-test 1`] = `
<div class="overflow-hidden justify-center">
  <ul class="inline-flex rounded-lg bg-grey-2 p-2 gap-3 w-full overflow-x-auto !list-none"
      role="tablist"
  >
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md text-primary-10"
              type="button"
              role="tab"
              id="tab-0"
              aria-selected="false"
      >
        Compte sans mot de passe
      </button>
    </li>
    <li role="presentation"
        class="p-0"
    >
      <button class="px-3 py-1 font-bold w-max hover:rounded-md hover:shadow-button hover:!bg-primary-2 hover:text-primary-9 text-md border border-grey-3 rounded-md shadow-button bg-white text-primary-9"
              type="button"
              role="tab"
              id="tab-1"
              aria-selected="true"
      >
        Compte avec mot de passe
      </button>
    </li>
  </ul>
  <div id="tabpanel-1"
       class
       role="tabpanel"
       aria-labelledby="tab-1"
       tabindex="1"
       label="Compte avec mot de passe"
  >
    <form class="flex flex-col gap-4">
      <div class="flex-grow flex flex-col gap-3">
        <label for="email">
          <div class="font-medium text-grey-8">
            Email professionnel *
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="text"
                 class="grow text-grey-8 px-4 outline-none text-md py-3"
                 id="email"
                 name="email"
          >
        </div>
      </div>
      <div class="flex-grow flex flex-col gap-3">
        <label for="password">
          <div class="font-medium text-grey-8">
            Mot de passe *
          </div>
        </label>
        <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
          <input type="password"
                 class="grow text-grey-8 px-4 outline-none text-md py-3 border-r border-solid border-grey-4"
                 id="password"
                 name="password"
          >
          <button type="button"
                  title="Voir le mot de passe"
                  class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-white hover:!border-primary-1 p-3.5 rounded-none border-none"
          >
            <span class="ri-eye-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8">
            </span>
          </button>
        </div>
      </div>
      <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
      <div class="flex gap-4 flex-wrap justify-end">
        <button type="button"
                class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
        >
          Annuler
        </button>
        <button type="submit"
                disabled
                class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
        >
          Valider
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`components/auth/Signup Etape2 smoke-test 1`] = `
<form class="flex flex-col gap-4">
  <div class="flex flex-col items-center"
       data-test="lien-envoye"
  >
    <svg width="134"
         height="134"
         viewbox="0 0 134 134"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M97.1501 8.37502C96.2265 8.37502 95.4751 7.62362 95.4751 6.70002C95.4751 5.77635 96.2265 5.02502 97.1501 5.02502C98.0737 5.02502 98.8251 5.77635 98.8251 6.70002C98.8251 7.62362 98.0737 8.37502 97.1501 8.37502Z"
            fill="#E1E1FD"
      >
      </path>
      <path d="M36.85 128.975C35.9265 128.975 35.175 128.224 35.175 127.3C35.175 126.376 35.9265 125.625 36.85 125.625C37.7736 125.625 38.5251 126.376 38.5251 127.3C38.5251 128.224 37.7736 128.975 36.85 128.975Z"
            fill="#E1E1FD"
      >
      </path>
      <path d="M20.1 21.775C19.1765 21.775 18.425 21.0236 18.425 20.1C18.425 19.1764 19.1765 18.425 20.1 18.425C21.0236 18.425 21.775 19.1764 21.775 20.1C21.775 21.0236 21.0236 21.775 20.1 21.775Z"
            fill="#E1E1FD"
      >
      </path>
      <path d="M68.6751 21.775C69.6002 21.775 70.3501 22.5249 70.3501 23.45C70.3501 24.3751 69.6002 25.125 68.6751 25.125C57.5742 25.125 48.5751 34.1241 48.5751 45.225C48.5751 56.3259 57.5742 65.325 68.6751 65.325C79.776 65.325 88.7751 56.3259 88.7751 45.225C88.7751 41.8361 87.9368 38.5721 86.3582 35.6603C85.9173 34.847 86.2192 33.8303 87.0324 33.3894C87.8457 32.9485 88.8624 33.2504 89.3033 34.0636C91.146 37.4627 92.1251 41.275 92.1251 45.225C92.1251 58.1761 81.6262 68.675 68.6751 68.675C55.724 68.675 45.2251 58.1761 45.2251 45.225C45.2251 32.2739 55.724 21.775 68.6751 21.775Z"
            fill="#F4C447"
      >
      </path>
      <path d="M56.8106 46.3821L56.9534 46.2695L74.7072 33.6618C75.9211 32.7997 77.5723 33.8315 77.3296 35.3005L73.7806 56.7843C73.5387 58.2486 71.6528 58.6982 70.7763 57.5006L65.8449 50.7621L57.6266 49.2837C56.2268 49.0319 55.7803 47.2837 56.8106 46.3821ZM71.125 52.3037L73.3692 38.7207L62.1447 46.6922L65.9801 47.3826L67.1544 45.5034C67.6446 44.7189 68.678 44.4803 69.4625 44.9705C70.191 45.4257 70.4487 46.3492 70.0893 47.107L69.9953 47.2786L68.8216 49.157L71.125 52.3037Z"
            fill="#F4C447"
      >
      </path>
      <path d="M112.225 110.55C113.15 110.55 113.9 111.3 113.9 112.225C113.9 113.084 113.253 113.792 112.42 113.889L112.225 113.9H98.8249C97.8998 113.9 97.1499 113.15 97.1499 112.225C97.1499 111.366 97.7965 110.658 98.6296 110.561L98.8249 110.55H112.225Z"
            fill="#404092"
      >
      </path>
      <path d="M53.7123 77.2347C54.3968 76.6124 55.4561 76.6629 56.0784 77.3474C56.6528 77.9792 56.654 78.9305 56.1124 79.5625L55.9657 79.7135L16.2016 113.464C15.5171 114.087 14.4578 114.036 13.8355 113.352C13.2611 112.72 13.2599 111.769 13.8015 111.137L13.9482 110.986L53.7123 77.2347Z"
            fill="#404092"
      >
      </path>
      <path d="M118.925 43.55C119.784 43.55 120.492 44.1967 120.589 45.0297L120.6 45.225V105.525C120.6 106.45 119.85 107.2 118.925 107.2C118.066 107.2 117.358 106.553 117.261 105.72L117.25 105.525V46.9H98.8249C97.9659 46.9 97.2579 46.2534 97.1612 45.4204L97.1499 45.225C97.1499 44.366 97.7965 43.6581 98.6296 43.5613L98.8249 43.55H118.925Z"
            fill="#404092"
      >
      </path>
      <path d="M38.5249 43.55C39.45 43.55 40.1999 44.3 40.1999 45.225C40.1999 46.084 39.5533 46.792 38.7202 46.8888L38.5249 46.9H16.7499V110.55H78.7249C79.5839 110.55 80.2919 111.197 80.3886 112.03L80.3999 112.225C80.3999 113.084 79.7533 113.792 78.9202 113.889L78.7249 113.9H15.0749C14.2159 113.9 13.5079 113.253 13.4112 112.42L13.3999 112.225V45.225C13.3999 44.366 14.0465 43.6581 14.8796 43.5613L15.0749 43.55H38.5249Z"
            fill="#404092"
      >
      </path>
      <path d="M117.25 112.225C117.25 111.3 118 110.55 118.925 110.55C119.85 110.55 120.6 111.3 120.6 112.225C120.6 113.15 119.85 113.9 118.925 113.9C118 113.9 117.25 113.15 117.25 112.225Z"
            fill="#404092"
      >
      </path>
      <path d="M117.828 43.9593C118.527 43.3535 119.585 43.429 120.191 44.1281C120.75 44.7734 120.729 45.7244 120.172 46.3434L120.022 46.4909L69.772 90.0409C69.2135 90.5249 68.4123 90.5808 67.7972 90.2019L67.6187 90.0751L14.0187 46.5251C13.3008 45.9417 13.1916 44.8868 13.775 44.1689C14.3135 43.5061 15.2537 43.3622 15.9599 43.8027L16.1312 43.9251L68.6398 86.5876L117.828 43.9593Z"
            fill="#404092"
      >
      </path>
      <path d="M83.1877 77.4731C82.4963 76.8586 81.4376 76.9208 80.823 77.6122C80.2557 78.2505 80.2651 79.2017 80.8137 79.8276L80.9621 79.977L111.112 106.777C111.804 107.392 112.862 107.329 113.477 106.638C114.044 106 114.035 105.048 113.486 104.422L113.338 104.273L83.1877 77.4731Z"
            fill="#404092"
      >
      </path>
    </svg>
    <p class="font-bold text-primary-9 text-center">
      Pour activer votre compte, veuillez consulter votre boite mail et
      <span class="font-extrabold text-primary-6">
        entrer le code reçu !
      </span>
    </p>
  </div>
  <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4 self-center w-fit">
    <input type="text"
           class="grow text-grey-8 px-4 outline-none text-md py-3 w-32 text-lg text-center"
           inputmode="numeric"
           name="otp"
           value="_ _ _ _ _ _"
    >
  </div>
  <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
  <div>
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-base py-3 px-6">
      Vous n'avez pas reçu de message ?
    </button>
  </div>
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="button"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Annuler
    </button>
    <button type="submit"
            disabled
            class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</form>
`;

exports[`components/auth/Signup Etape2Erreur smoke-test 1`] = `
<form class="flex flex-col gap-4">
  <div class="flex flex-col items-center"
       data-test="lien-envoye"
  >
    <svg width="134"
         height="134"
         viewbox="0 0 134 134"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M97.1501 8.37502C96.2265 8.37502 95.4751 7.62362 95.4751 6.70002C95.4751 5.77635 96.2265 5.02502 97.1501 5.02502C98.0737 5.02502 98.8251 5.77635 98.8251 6.70002C98.8251 7.62362 98.0737 8.37502 97.1501 8.37502Z"
            fill="#E1E1FD"
      >
      </path>
      <path d="M36.85 128.975C35.9265 128.975 35.175 128.224 35.175 127.3C35.175 126.376 35.9265 125.625 36.85 125.625C37.7736 125.625 38.5251 126.376 38.5251 127.3C38.5251 128.224 37.7736 128.975 36.85 128.975Z"
            fill="#E1E1FD"
      >
      </path>
      <path d="M20.1 21.775C19.1765 21.775 18.425 21.0236 18.425 20.1C18.425 19.1764 19.1765 18.425 20.1 18.425C21.0236 18.425 21.775 19.1764 21.775 20.1C21.775 21.0236 21.0236 21.775 20.1 21.775Z"
            fill="#E1E1FD"
      >
      </path>
      <path d="M68.6751 21.775C69.6002 21.775 70.3501 22.5249 70.3501 23.45C70.3501 24.3751 69.6002 25.125 68.6751 25.125C57.5742 25.125 48.5751 34.1241 48.5751 45.225C48.5751 56.3259 57.5742 65.325 68.6751 65.325C79.776 65.325 88.7751 56.3259 88.7751 45.225C88.7751 41.8361 87.9368 38.5721 86.3582 35.6603C85.9173 34.847 86.2192 33.8303 87.0324 33.3894C87.8457 32.9485 88.8624 33.2504 89.3033 34.0636C91.146 37.4627 92.1251 41.275 92.1251 45.225C92.1251 58.1761 81.6262 68.675 68.6751 68.675C55.724 68.675 45.2251 58.1761 45.2251 45.225C45.2251 32.2739 55.724 21.775 68.6751 21.775Z"
            fill="#F4C447"
      >
      </path>
      <path d="M56.8106 46.3821L56.9534 46.2695L74.7072 33.6618C75.9211 32.7997 77.5723 33.8315 77.3296 35.3005L73.7806 56.7843C73.5387 58.2486 71.6528 58.6982 70.7763 57.5006L65.8449 50.7621L57.6266 49.2837C56.2268 49.0319 55.7803 47.2837 56.8106 46.3821ZM71.125 52.3037L73.3692 38.7207L62.1447 46.6922L65.9801 47.3826L67.1544 45.5034C67.6446 44.7189 68.678 44.4803 69.4625 44.9705C70.191 45.4257 70.4487 46.3492 70.0893 47.107L69.9953 47.2786L68.8216 49.157L71.125 52.3037Z"
            fill="#F4C447"
      >
      </path>
      <path d="M112.225 110.55C113.15 110.55 113.9 111.3 113.9 112.225C113.9 113.084 113.253 113.792 112.42 113.889L112.225 113.9H98.8249C97.8998 113.9 97.1499 113.15 97.1499 112.225C97.1499 111.366 97.7965 110.658 98.6296 110.561L98.8249 110.55H112.225Z"
            fill="#404092"
      >
      </path>
      <path d="M53.7123 77.2347C54.3968 76.6124 55.4561 76.6629 56.0784 77.3474C56.6528 77.9792 56.654 78.9305 56.1124 79.5625L55.9657 79.7135L16.2016 113.464C15.5171 114.087 14.4578 114.036 13.8355 113.352C13.2611 112.72 13.2599 111.769 13.8015 111.137L13.9482 110.986L53.7123 77.2347Z"
            fill="#404092"
      >
      </path>
      <path d="M118.925 43.55C119.784 43.55 120.492 44.1967 120.589 45.0297L120.6 45.225V105.525C120.6 106.45 119.85 107.2 118.925 107.2C118.066 107.2 117.358 106.553 117.261 105.72L117.25 105.525V46.9H98.8249C97.9659 46.9 97.2579 46.2534 97.1612 45.4204L97.1499 45.225C97.1499 44.366 97.7965 43.6581 98.6296 43.5613L98.8249 43.55H118.925Z"
            fill="#404092"
      >
      </path>
      <path d="M38.5249 43.55C39.45 43.55 40.1999 44.3 40.1999 45.225C40.1999 46.084 39.5533 46.792 38.7202 46.8888L38.5249 46.9H16.7499V110.55H78.7249C79.5839 110.55 80.2919 111.197 80.3886 112.03L80.3999 112.225C80.3999 113.084 79.7533 113.792 78.9202 113.889L78.7249 113.9H15.0749C14.2159 113.9 13.5079 113.253 13.4112 112.42L13.3999 112.225V45.225C13.3999 44.366 14.0465 43.6581 14.8796 43.5613L15.0749 43.55H38.5249Z"
            fill="#404092"
      >
      </path>
      <path d="M117.25 112.225C117.25 111.3 118 110.55 118.925 110.55C119.85 110.55 120.6 111.3 120.6 112.225C120.6 113.15 119.85 113.9 118.925 113.9C118 113.9 117.25 113.15 117.25 112.225Z"
            fill="#404092"
      >
      </path>
      <path d="M117.828 43.9593C118.527 43.3535 119.585 43.429 120.191 44.1281C120.75 44.7734 120.729 45.7244 120.172 46.3434L120.022 46.4909L69.772 90.0409C69.2135 90.5249 68.4123 90.5808 67.7972 90.2019L67.6187 90.0751L14.0187 46.5251C13.3008 45.9417 13.1916 44.8868 13.775 44.1689C14.3135 43.5061 15.2537 43.3622 15.9599 43.8027L16.1312 43.9251L68.6398 86.5876L117.828 43.9593Z"
            fill="#404092"
      >
      </path>
      <path d="M83.1877 77.4731C82.4963 76.8586 81.4376 76.9208 80.823 77.6122C80.2557 78.2505 80.2651 79.2017 80.8137 79.8276L80.9621 79.977L111.112 106.777C111.804 107.392 112.862 107.329 113.477 106.638C114.044 106 114.035 105.048 113.486 104.422L113.338 104.273L83.1877 77.4731Z"
            fill="#404092"
      >
      </path>
    </svg>
    <p class="font-bold text-primary-9 text-center">
      Pour activer votre compte, veuillez consulter votre boite mail et
      <span class="font-extrabold text-primary-6">
        entrer le code reçu !
      </span>
    </p>
  </div>
  <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4 self-center w-fit">
    <input type="text"
           class="grow text-grey-8 px-4 outline-none text-md py-3 w-32 text-lg text-center"
           inputmode="numeric"
           name="otp"
           value="_ _ _ _ _ _"
    >
  </div>
  <div class="flex items-center text-error-1 mt-4">
    <span class="ri-spam-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
    </span>
    <span class="text-xs">
      Message d'erreur
    </span>
  </div>
  <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
  <div>
    <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-base py-3 px-6">
      Vous n'avez pas reçu de message ?
    </button>
  </div>
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="button"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Annuler
    </button>
    <button type="submit"
            disabled
            class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</form>
`;

exports[`components/auth/Signup Etape3 smoke-test 1`] = `
<form class="flex flex-col gap-4">
  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    <div class="flex-grow flex flex-col gap-3">
      <label for="nom">
        <div class="font-medium text-grey-8">
          Nom *
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="nom"
               name="nom"
        >
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label for="prenom">
        <div class="font-medium text-grey-8">
          Prénom *
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="prenom"
               name="prenom"
        >
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3 md:col-span-2">
      <label for="telephone">
        <div class="font-medium text-grey-8">
          Numéro de téléphone professionnel *
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="tel"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               inputmode="numeric"
               id="telephone"
               name="telephone"
               value
        >
      </div>
      <div class="flex items-center text-info-1">
        <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
        </span>
        <span class="text-xs">
          L'accès à votre numéro est réservé à l'équipe ADEME de l'outil et le contact par mail restera privilégié
        </span>
      </div>
    </div>
  </div>
  <hr class="mt-5">
  <div class="flex gap-2 min-w-min">
    <input id=":r0:"
           type="checkbox"
           class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4 font-medium"
           data-test="accept-cgu"
           name="cgu_acceptees"
    >
    <div class="flex flex-col gap-1">
      <label for=":r0:"
             class="inline-flex items-center cursor-pointer font-medium text-grey-8"
      >
        J’accepte le cadre d’utilisation de la plateforme *
      </label>
      <div class="flex items-center text-grey-7 my-auto">
        <a href="https://territoiresentransitions.fr/cgu"
           class="bg-none after:hidden w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
        >
          Les conditions générales
        </a>
        <span class="text-sm mx-2">
          |
        </span>
        <a href="https://www.ademe.fr/donnees-personnelles/"
           class="bg-none after:hidden w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
        >
          la politique de protection des données de l'ADEME
        </a>
      </div>
    </div>
  </div>
  <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="submit"
            disabled
            class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</form>
`;

exports[`components/auth/Signup Etape3Erreur smoke-test 1`] = `
<form class="flex flex-col gap-4">
  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    <div class="flex-grow flex flex-col gap-3">
      <label for="nom">
        <div class="font-medium text-grey-8">
          Nom *
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="nom"
               name="nom"
        >
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label for="prenom">
        <div class="font-medium text-grey-8">
          Prénom *
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="prenom"
               name="prenom"
        >
      </div>
    </div>
    <div class="flex-grow flex flex-col gap-3 md:col-span-2">
      <label for="telephone">
        <div class="font-medium text-grey-8">
          Numéro de téléphone professionnel *
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="tel"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               inputmode="numeric"
               id="telephone"
               name="telephone"
               value
        >
      </div>
      <div class="flex items-center text-info-1">
        <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
        </span>
        <span class="text-xs">
          L'accès à votre numéro est réservé à l'équipe ADEME de l'outil et le contact par mail restera privilégié
        </span>
      </div>
    </div>
  </div>
  <hr class="mt-5">
  <div class="flex gap-2 min-w-min">
    <input id=":r1:"
           type="checkbox"
           class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4 font-medium"
           data-test="accept-cgu"
           name="cgu_acceptees"
    >
    <div class="flex flex-col gap-1">
      <label for=":r1:"
             class="inline-flex items-center cursor-pointer font-medium text-grey-8"
      >
        J’accepte le cadre d’utilisation de la plateforme *
      </label>
      <div class="flex items-center text-grey-7 my-auto">
        <a href="https://territoiresentransitions.fr/cgu"
           class="bg-none after:hidden w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
        >
          Les conditions générales
        </a>
        <span class="text-sm mx-2">
          |
        </span>
        <a href="https://www.ademe.fr/donnees-personnelles/"
           class="bg-none after:hidden w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6"
        >
          la politique de protection des données de l'ADEME
        </a>
      </div>
    </div>
  </div>
  <div class="flex items-center text-error-1 mt-4">
    <span class="ri-spam-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
    </span>
    <span class="text-xs">
      Message d'erreur
    </span>
  </div>
  <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="submit"
            disabled
            class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</form>
`;

exports[`components/auth/Signup Etape4 smoke-test 1`] = `
<form class="flex flex-col gap-4">
  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    <div class="flex-grow flex flex-col gap-3 md:col-span-2">
      <label>
        <div class="font-medium text-grey-8">
          Nom de la collectivité *
        </div>
      </label>
      <button aria-expanded="false"
              aria-label="ouvrir le menu"
              class="w-full rounded-xl border border-solid border-grey-4 disabled:border-grey-3 bg-grey-1 hover:!bg-primary-0 disabled:hover:!bg-grey-1 overflow-hidden"
              type="button"
      >
        <div class="flex px-4 min-h-[3rem] py-2">
          <div class="flex grow flex-wrap gap-2 mr-4">
            <input type="text"
                   class="w-full text-sm outline-0 placeholder:text-grey-6"
                   placeholder="Rechercher par mots-clés"
                   value
            >
          </div>
          <span class="ri-arrow-down-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mt-2 ml-auto text-primary-9">
          </span>
        </div>
      </button>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label>
        <div class="font-medium text-grey-8">
          Rôle *
        </div>
      </label>
      <button data-test="role"
              aria-expanded="false"
              aria-label="ouvrir le menu"
              class="w-full rounded-xl border border-solid border-grey-4 disabled:border-grey-3 bg-grey-1 hover:!bg-primary-0 disabled:hover:!bg-grey-1 overflow-hidden"
              type="button"
      >
        <div class="flex px-4 min-h-[3rem] py-2">
          <div class="flex grow flex-wrap gap-2 mr-4">
            <span class="my-auto text-left text-xs text-grey-6 line-clamp-1">
              Sélectionner une option
            </span>
          </div>
          <span class="ri-arrow-down-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mt-2 ml-auto text-primary-9">
          </span>
        </div>
      </button>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label for="poste">
        <div class="font-medium text-grey-8">
          Intitulé de poste
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="poste"
               name="poste"
        >
      </div>
    </div>
    <div class="flex gap-2 min-w-min md:col-span-2">
      <input id=":r4:"
             type="checkbox"
             class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
             name="referent"
      >
      <div class="flex flex-col gap-1">
        <label for=":r4:"
               class="inline-flex items-center cursor-pointer font-medium text-grey-8"
        >
          Je suis référent.e dans le programme Territoire Engagé Transition Ecologique
        </label>
      </div>
    </div>
  </div>
  <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="button"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Annuler
    </button>
    <button type="submit"
            disabled
            class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</form>
`;

exports[`components/auth/Signup Etape4Erreur smoke-test 1`] = `
<form class="flex flex-col gap-4">
  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
    <div class="flex-grow flex flex-col gap-3 md:col-span-2">
      <label>
        <div class="font-medium text-grey-8">
          Nom de la collectivité *
        </div>
      </label>
      <button aria-expanded="false"
              aria-label="ouvrir le menu"
              class="w-full rounded-xl border border-solid border-grey-4 disabled:border-grey-3 bg-grey-1 hover:!bg-primary-0 disabled:hover:!bg-grey-1 overflow-hidden"
              type="button"
      >
        <div class="flex px-4 min-h-[3rem] py-2">
          <div class="flex grow flex-wrap gap-2 mr-4">
            <input type="text"
                   class="w-full text-sm outline-0 placeholder:text-grey-6"
                   placeholder="Rechercher par mots-clés"
                   value
            >
          </div>
          <span class="ri-arrow-down-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mt-2 ml-auto text-primary-9">
          </span>
        </div>
      </button>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label>
        <div class="font-medium text-grey-8">
          Rôle *
        </div>
      </label>
      <button data-test="role"
              aria-expanded="false"
              aria-label="ouvrir le menu"
              class="w-full rounded-xl border border-solid border-grey-4 disabled:border-grey-3 bg-grey-1 hover:!bg-primary-0 disabled:hover:!bg-grey-1 overflow-hidden"
              type="button"
      >
        <div class="flex px-4 min-h-[3rem] py-2">
          <div class="flex grow flex-wrap gap-2 mr-4">
            <span class="my-auto text-left text-xs text-grey-6 line-clamp-1">
              Sélectionner une option
            </span>
          </div>
          <span class="ri-arrow-down-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mt-2 ml-auto text-primary-9">
          </span>
        </div>
      </button>
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label for="poste">
        <div class="font-medium text-grey-8">
          Intitulé de poste
        </div>
      </label>
      <div class="inline-flex items-stretch border border-solid rounded-lg bg-grey-1 overflow-hidden focus-within:border-primary-5 border-grey-4">
        <input type="text"
               class="grow text-grey-8 px-4 outline-none text-md py-3"
               id="poste"
               name="poste"
        >
      </div>
    </div>
    <div class="flex gap-2 min-w-min md:col-span-2">
      <input id=":r7:"
             type="checkbox"
             class="!appearance-none shrink-0 checked:before:icon-check-line checked:bg-primary checked:disabled:bg-primary-5 flex content-center justify-center mt-0.5 border border-solid !border-grey-6 rounded flex-wrap w-5 h-5 !text-white  checked:!border-transparent checked:hover:bg-primary-8 checked:!disabled:border-grey-4"
             name="referent"
      >
      <div class="flex flex-col gap-1">
        <label for=":r7:"
               class="inline-flex items-center cursor-pointer font-medium text-grey-8"
        >
          Je suis référent.e dans le programme Territoire Engagé Transition Ecologique
        </label>
      </div>
    </div>
  </div>
  <div class="flex items-center text-error-1 mt-4">
    <span class="ri-spam-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
    </span>
    <span class="text-xs">
      Message d'erreur
    </span>
  </div>
  <hr class="bg-gradient-to-r from-primary-3 to-primary-3 mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="button"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Annuler
    </button>
    <button type="submit"
            disabled
            class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed rounded-lg border font-bold !text-primary-3 !bg-primary-4 !border-primary-4 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</form>
`;
